completed basic styles

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,9 @@
 @import "global";
+@import "blocks/page-header";
+@import "blocks/main-nav";
+@import "blocks/promo";
+@import "blocks/devices-list";
+@import "blocks/button";
+@import "blocks/advantages";
+@import "blocks/reviews";
+@import "blocks/slider";
