--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -1,10 +1,11 @@
 body {
   margin: 0;
+  font-family: "Open Sans", Arial, sans-serif;
+  font-size: 24px;
 }
 
 a {
   text-decoration: none;
-  color: black;
 }
 
 img {
