--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -30,3 +30,16 @@
   font-weight: 400;
   line-height: 30px; /* 214.286% */
 }
+
+@mixin table-heading {
+  $table-heading-bg: #283645;
+
+  background-color: $table-heading-bg;
+  padding: 19px 95px 35px;
+  color: #fff;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 30px; /* 187.5% */
+  text-transform: uppercase;
+}
