--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -4,3 +4,4 @@ $nav-color: #283645;
 $rounded-button-upload: #D22856;
 $rounded-button-cancel: rgba(40, 54, 69, 10%);
 $advantages-background: #f2f2f2;
+$table-border: #e5e5e5;
