completed index.html

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,3 +11,6 @@
 @import "blocks/questions";
 @import "blocks/plans";
 @import "blocks/contacts";
+@import "blocks/page-footer";
+@import "blocks/socials";
+@import "blocks/map";
